--- a/src/scheduledtask.html
+++ b/src/scheduledtask.html
@@ -20,66 +20,70 @@
             </div>
         </div>
     </div>
-    <div data-role="popup" id="popupAddTrigger" class="dialog dialog-fixedSize dialog-medium hide" style="position: fixed; top: 10%;">
-        <form class="addTriggerForm" style="padding:1em;">
-            <div class="ui-bar-a">
-                <h3>${HeaderAddScheduledTaskTrigger}</h3>
+    <div data-role="popup" id="popupAddTrigger" class="dialog dialog-fixedSize dialog-medium formDialog hide">
+        <div class="popupDialogContent smoothScrollY">
+            <div class="formDialogHeader align-items-center justify-content-center">
+                <h2 class="formDialogHeaderTitle">
+                    ${HeaderAddScheduledTaskTrigger}
+                </h2>
             </div>
-            <div data-role="content">
-                <div class="selectContainer">
-                    <select is="emby-select" id="selectTriggerType" class="selectTriggerType" label="${LabelTriggerType}">
-                        <option value="DailyTrigger">${OptionDaily}</option>
-                        <option value="WeeklyTrigger">${OptionWeekly}</option>
-                        <option value="IntervalTrigger">${OptionOnInterval}</option>
-                        <option value="StartupTrigger">${OptionOnAppStartup}</option>
-                    </select>
+            <form class="addTriggerForm dialogContentInner dialog-content-centered">
+                <div data-role="content">
+                    <div class="selectContainer">
+                        <select is="emby-select" id="selectTriggerType" class="selectTriggerType" label="${LabelTriggerType}">
+                            <option value="DailyTrigger">${OptionDaily}</option>
+                            <option value="WeeklyTrigger">${OptionWeekly}</option>
+                            <option value="IntervalTrigger">${OptionOnInterval}</option>
+                            <option value="StartupTrigger">${OptionOnAppStartup}</option>
+                        </select>
+                    </div>
+                    <div id="fldDayOfWeek" class="selectContainer">
+                        <select is="emby-select" id="selectDayOfWeek" name="selectDayOfWeek" label="${LabelDay}">
+                            <option value="Sunday">${OptionSunday}</option>
+                            <option value="Monday">${OptionMonday}</option>
+                            <option value="Tuesday">${OptionTuesday}</option>
+                            <option value="Wednesday">${OptionWednesday}</option>
+                            <option value="Thursday">${OptionThursday}</option>
+                            <option value="Friday">${OptionFriday}</option>
+                            <option value="Saturday">${OptionSaturday}</option>
+                        </select>
+                    </div>
+                    <div id="fldTimeOfDay" class="selectContainer">
+                        <select is="emby-select" id="selectTimeOfDay" label="${LabelTime}"></select>
+                    </div>
+                    <div id="fldSelectSystemEvent" class="selectContainer">
+                        <select is="emby-select" id="selectSystemEvent" name="selectSystemEvent" label="${LabelEvent}">
+                            <option value="WakeFromSleep">${OptionWakeFromSleep}</option>
+                        </select>
+                    </div>
+                    <div id="fldSelectInterval" class="selectContainer">
+                        <select is="emby-select" id="selectInterval" label="${LabelEveryXMinutes}">
+                            <option value="9000000000">15 minutes</option>
+                            <option value="18000000000">30 minutes</option>
+                            <option value="27000000000">45 minutes</option>
+                            <option value="36000000000">1 hour</option>
+                            <option value="72000000000">2 hours</option>
+                            <option value="108000000000">3 hours</option>
+                            <option value="144000000000">4 hours</option>
+                            <option value="216000000000">6 hours</option>
+                            <option value="288000000000">8 hours</option>
+                            <option value="432000000000">12 hours</option>
+                            <option value="864000000000">24 hours</option>
+                        </select>
+                    </div>
+                    <div class="inputContainer">
+                        <input is="emby-input" id="txtTimeLimit" type="number" pattern="[0-9]*" min="1" step=".5" label="${LabelTimeLimitHours}" />
+                    </div>
+                    <div class="formDialogFooter">
+                        <button is="emby-button" type="submit" class="raised button-submit block btnSave formDialogFooterItem">
+                            <span>${ButtonAdd}</span>
+                        </button>
+                        <button is="emby-button" type="button" class="raised button-cancel block btnCancel formDialogFooterItem" onclick="$(this).parents('.dialog').addClass('hide');">
+                            <span>${ButtonCancel}</span>
+                        </button>
+                    </div>
                 </div>
-                <div id="fldDayOfWeek" class="selectContainer">
-                    <select is="emby-select" id="selectDayOfWeek" name="selectDayOfWeek" label="${LabelDay}">
-                        <option value="Sunday">${OptionSunday}</option>
-                        <option value="Monday">${OptionMonday}</option>
-                        <option value="Tuesday">${OptionTuesday}</option>
-                        <option value="Wednesday">${OptionWednesday}</option>
-                        <option value="Thursday">${OptionThursday}</option>
-                        <option value="Friday">${OptionFriday}</option>
-                        <option value="Saturday">${OptionSaturday}</option>
-                    </select>
-                </div>
-                <div id="fldTimeOfDay" class="selectContainer">
-                    <select is="emby-select" id="selectTimeOfDay" label="${LabelTime}"></select>
-                </div>
-                <div id="fldSelectSystemEvent" class="selectContainer">
-                    <select is="emby-select" id="selectSystemEvent" name="selectSystemEvent" label="${LabelEvent}">
-                        <option value="WakeFromSleep">${OptionWakeFromSleep}</option>
-                    </select>
-                </div>
-                <div id="fldSelectInterval" class="selectContainer">
-                    <select is="emby-select" id="selectInterval" label="${LabelEveryXMinutes}">
-                        <option value="9000000000">15 minutes</option>
-                        <option value="18000000000">30 minutes</option>
-                        <option value="27000000000">45 minutes</option>
-                        <option value="36000000000">1 hour</option>
-                        <option value="72000000000">2 hours</option>
-                        <option value="108000000000">3 hours</option>
-                        <option value="144000000000">4 hours</option>
-                        <option value="216000000000">6 hours</option>
-                        <option value="288000000000">8 hours</option>
-                        <option value="432000000000">12 hours</option>
-                        <option value="864000000000">24 hours</option>
-                    </select>
-                </div>
-                <div class="inputContainer">
-                    <input is="emby-input" id="txtTimeLimit" type="number" pattern="[0-9]*" min="1" step=".5" label="${LabelTimeLimitHours}" />
-                </div>
-                <div>
-                    <button is="emby-button" type="submit" class="raised button-submit block" data-icon="check">
-                        <span>${ButtonAdd}</span>
-                    </button>
-                    <button is="emby-button" type="button" class="raised button-cancel block" data-icon="delete" onclick="$(this).parents('.dialog').addClass('hide');">
-                        <span>${ButtonCancel}</span>
-                    </button>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
